Resolves: tdf#145582 modify called too often

a problem since:

commit 5b98dd53c7dc101d3a5ff693d3f0520ec1abd3d1
Date:   Tue Aug 3 12:28:23 2021 +0100

    tdf#143657 'execute' button doesn't get enabled when contents changed

which was a fix for the problem since:

commit 73c9ef661d9ef6237d3fd3c259fd040a545b44cf
Date:   Tue Jul 6 18:51:38 2021 +0200

    tdf#132740 don't broadcast if modified status has not changed

Change-Id: Ibae42251ce04229283283407bc2ab986272e945d